<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulescuro"
    android:orientation="vertical"
    tools:context="tcc.quizdaprogramacao.QuestoesTrialGameActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/azulescuro"
        android:minHeight="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">


            <TextView
                android:id="@+id/triviaQuizText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fontFamily="@font/square"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="28sp" />



        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>

    //Questao
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/triviaQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/question"
            android:textColor="@color/preto"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/azulescuro"
            android:textSize="30sp" />
    </LinearLayout>

    //Alternativas
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="#091A79"
            android:onClick="buttonA"
            android:text=""
            android:textColor="@color/branco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="#091A79"
            android:onClick="buttonC"
            android:text=""
            android:textColor="@color/branco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="#091A79"
            android:onClick="buttonB"
            android:text=""
            android:textColor="@color/branco"
            android:textSize="16sp" />


        //Contador e Relogio
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:id="@+id/checkImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="108dp"
                android:layout_marginRight="108dp"
                android:src="@drawable/check_mark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/clockImage"
                app:layout_constraintStart_toEndOf="@+id/contadorText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.188" />

            <TextView
                android:id="@+id/contadorText"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/checkImage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.188" />


            <ImageView
                android:id="@+id/clockImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/clock_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/timeText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.188" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/time"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.188" />


        </android.support.constraint.ConstraintLayout>


    </LinearLayout>


</LinearLayout>
